# datascribe_api

./: .pre-commit-config.yaml  404.html  README.md  README_CLI.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: gh-pages.yml  lint.yml  manual-test.yml  release.yml  test.yml  test_api.yml  test_cli.yml  test_filter.yml
api_reference/: index.html
cli/: index.html
docs/: api_reference.md  cli.md  endpoints.md  index.md  overview.md
docs/installation/: api.md  cli.md  index.md
docs/models/: DataTable.md  DataTableColumns.md  DataTableMetadata.md  DataTableRows.md  DataTableRowsCount.md  DataTables.md  MaterialByIdResults.md  MaterialSearchResults.md  index.md
docs/stylesheets/: style.css
endpoints/: index.html
installation/: index.html
installation/api/: index.html
installation/cli/: index.html
models/: index.html
models/DataTable/: index.html
models/DataTableColumns/: index.html
models/DataTableMetadata/: index.html
models/DataTableRows/: index.html
models/DataTableRowsCount/: index.html
models/DataTables/: index.html
models/MaterialByIdResults/: index.html
models/MaterialSearchResults/: index.html
overview/: index.html
search/: search_index.json
src/datascribe_api/: cli.py  client.py  client.pyi  filter.py  models.py  routes.py  utils.py
src/datascribe_cli/: README_CLI.md  __init__.py  __main__.py  cli.py
tests/: test_api.py  test_cli.py  test_filter.py
