[project]
name = "datascribe-api"
version = "0.1.0"
description = "A Python client for the Datascribe API"
readme = "README.md"
authors = [
    { name = "Doguhan Sariturk", email = "dogu.sariturk@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "backoff>=2.2.1",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "typer>=0.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pip>=25.1.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.4",
]

[project.scripts]
datascribe_cli = "datascribe_cli.cli:app"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "ERA", # Eradicate
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "FA",  # flake8-future-annotations
    "ICN", # flake8-import-conventions
    "Q",   # flake8-quotes
    "SIM", # flake8-simplify
    "TC",  # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "I",   # isort
    "N",   # pep8-naming
    "E",   # pycodestyle Errors
    "W",   # pycodestyle Warnings
    "D",   # pydocstyle
    "F",   # Pyflakes
    "PL",  # Pylint
    "UP",  # pyupgrade
]
ignore = [
    "E501",   # Line too long
    "F401",   # Module imported but unused
    'ERA001', # Eradicate: Commented-out code
    'D105',   # Missing docstring in magic method
]
pydocstyle.convention = "google"

[tool.ruff.format]
docstring-code-format = true
